--- a/config.json
+++ b/config.json
@@ -22,11 +22,11 @@
   },
   "commandDisabled": [],
   "eventDisabled": [],
-  "BOTNAME": "Bot",
-  "PREFIX": "?",
+  "BOTNAME": "Amir",
+  "PREFIX": ".",
   "ADMINBOT": [
-    "YOUR_FB_UID",
-    "OTHER_FB_UID"
+    "100000862816633",
+    ""
   ],
   "DESIGN": {
     "Title": "BotPack",
